Fixed the mobile view bug for extra white spacing to the right of the home page.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -969,7 +969,7 @@ img{
 	position: relative;
 	display: inline-block;
 }
-.counter-title h2::before {
+/* .counter-title h2::before {
 	content: '';
 	width: 80px;
 	position: absolute;
@@ -986,7 +986,7 @@ img{
 	background: #222854;
 	right: -140px;
 	top: 17px;
-}
+} */
 .counter-title h2 span{
 	color: #222854;
 }
